unpackaged/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>