unpackaged/main/default/objects/Recommendation__c/fields/Attorney_Justification__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attorney Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>