unpackaged/main/default/objects/Recommendation__c/fields/Comments_for_Recommendation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Recommendation_Approver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments for Recommendation Approver</label>
    <type>TextArea</type>
</CustomField>