unpackaged/main/default/objects/Recommendation__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RFP_Initiation_Accounts__c.RFP__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.RFP_Initiation__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RFP_Initiation_Accounts__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>