unpackaged/main/default/objects/Recommendation__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>Firm__r.Law_Firm__r.Name</formula>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>