unpackaged/main/default/objects/Recommendation__c/fields/Legal_Expense_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Legal_Expense_Responsibility__c</fullName>
    <formula>TEXT( RFP_Initiation__r.Legal_Expense_Responsibility__c )</formula>
    <label>Legal Expense Responsibility</label>
    <type>Text</type>
</CustomField>