unpackaged/main/default/objects/Recommendation__c/fields/Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>Matter_Name__c</fullName>
    <formula>RFP_Initiation__r.Matter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Name</label>
    <type>Text</type>
</CustomField>