unpackaged/main/default/objects/Recommendation__c/fields/Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Paralegal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paralegal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recommendations (Paralegal)</relationshipLabel>
    <relationshipName>Recommendations3</relationshipName>
    <type>Lookup</type>
</CustomField>