unpackaged/main/default/objects/Recommendation__c/fields/Project_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Project_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recommendations (Project Attorney)</relationshipLabel>
    <relationshipName>Recommendations2</relationshipName>
    <type>Lookup</type>
</CustomField>