unpackaged/main/default/objects/Recommendation__c/fields/Recommended_Firm__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recommended Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Law_Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>