unpackaged/main/default/objects/Recommendation__c/fields/Retainer_Agreement_Justification__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Agreement_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>You must upload emails exchanged with Outside Counsel in lieu of Retainer Agreement</inlineHelpText>
    <label>Skip Retainer Agreement Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>