unpackaged/main/default/objects/Recommendation__c/fields/RFP_Initiation__c.field-meta.xml
<CustomField>
    <fullName>RFP_Initiation__c</fullName>
    <label>RFP Initiation</label>
    <referenceTo>RFP_Initiation__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>