unpackaged/main/default/objects/Recommendation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>TEXT (Firm__r.Role__c)</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>