unpackaged/main/default/objects/Recommendation__c/fields/Skip_Retainer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Skip_Retainer_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm whether retainer agreement process is needed</inlineHelpText>
    <label>Skip Retainer Agreement</label>
    <type>Checkbox</type>
</CustomField>