unpackaged/main/default/objects/Recommendation__c/fields/Supervisory_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>IDB Invest supervisory attorney for administration of External Legal Services</inlineHelpText>
    <label>Supervisory Attorney</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>IDB Invest Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>